--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         </span>
        
     </nav>
-    <header></header>
+    <header>
+        <h1>Zamów dostawę w Twojej okolicy</h1>
+    </header>
     <main>
         <section></section>
         <section></section>
