feature/menu block

--- a/index.html
+++ b/index.html
@@ -43,10 +43,26 @@
               <button class="order-button">Wyszukaj restauracje</button>
 
             </div>
+            <p class="paragraph-Login">Lub <a href="index.html"> Zaloguj się </a></p>
         </div>
     </header>
     <main>
-        <section>
+        <section class="block-container">
+            <div class="menu-block">
+                <img src="img/utworz.png" alt="Utworz konto firmowe">
+                <h2>Zadbaj o posiłki dla pracowników</h2>
+                <p><a href="index.html">Utwórz konto firmowe</a></p>
+            </div>
+            <div class="menu-block">
+                <img src="img/dodaj.png" alt="dodaj">
+                <h2>Ty zapewniasz menu, a my dostawę</h2>
+                <p><a href="index.html">Dodaj swoją restauracje</a></p>
+            </div>
+            <div class="menu-block">
+                <img src="img/rejestracja.png" alt="rejestracja">
+                <h2>Realizuj dostawy z Uber Eats</h2>
+                <p><a href="index.html">Zarejestruj się, aby realizować dostawy</a></p>
+            </div>
 
         </section>
 
