feature/Town section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <header>
         <div class="header-container">
-            <h1>Zamów dostawę w  Twojej okolicy</h1>
+            <h1>Zamów dostawę w Twojej okolicy</h1>
             <div class="order-container">
 
                 <div class="input-container">
@@ -36,18 +36,19 @@
                     <input type="text" placeholder="Wpisz adres dostawy">
                 </div>
                 <div class="order-list-container">
-              <div class="order-list"><i class="fa-solid fa-clock"></i> Dostarcz Teraz  <span class="span-dropdown"><i class="fa-solid fa-v"></i></span></div>
-              <div class="order-list hidden"><i class="fa-solid fa-clock"></i> Dostarcz Teraz</div>
-              <div class="order-list hidden"><i class="fa-solid fa-calendar-days"></i> Zaplanuj na później</div>
-              </div>
-              <button class="order-button">Wyszukaj restauracje</button>
+                    <div class="order-list"><i class="fa-solid fa-clock"></i> Dostarcz Teraz <span
+                            class="span-dropdown"><i class="fa-solid fa-v"></i></span></div>
+                    <div class="order-list hidden"><i class="fa-solid fa-clock"></i> Dostarcz Teraz</div>
+                    <div class="order-list hidden"><i class="fa-solid fa-calendar-days"></i> Zaplanuj na później</div>
+                </div>
+                <button class="order-button">Wyszukaj restauracje</button>
 
             </div>
             <p class="paragraph-Login">Lub <a href="index.html"> Zaloguj się </a></p>
         </div>
     </header>
     <main>
-        <section class="block-container">
+        <section class="menu-container">
             <div class="menu-block">
                 <img src="img/utworz.png" alt="Utworz konto firmowe">
                 <h2>Zadbaj o posiłki dla pracowników</h2>
@@ -61,12 +62,46 @@
             <div class="menu-block">
                 <img src="img/rejestracja.png" alt="rejestracja">
                 <h2>Realizuj dostawy z Uber Eats</h2>
-                <p><a href="index.html">Zarejestruj się, aby realizować dostawy</a></p>
+                <p><a href="index.html">Zarejestruj się,aby realizować dostawy</a></p>
             </div>
 
         </section>
 
-        <section></section>
+        <section class="towns-container">
+            <div class="towns-header">
+                <h2>Miasta w pobliżu</h2>
+                <a href="index.html">Wyświetl wszystkie miasta (ponad 500)</a>
+            </div>
+            <iframe class="map-container"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5555204.900963964!2d16.121598104918466!3d51.432893619685586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1761642508922!5m2!1spl!2spl"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="towns-list">
+                <div class="town">Białystok</div>
+                <div class="town">Bydgoszcz</div>
+                <div class="town">Częstochowa</div>
+                <div class="town">Gorzów Wielkopolski</div>
+                <div class="town">Kalisz</div>
+                <div class="town">Kielce</div>
+                <div class="town">Koszalin</div>
+                <div class="town">Kraków</div>
+                <div class="town">Legnica</div>
+                <div class="town">Łódź</div>
+                <div class="town">Lublin</div>
+                <div class="town">Olsztyn</div>
+                <div class="town">Płock</div>
+                <div class="town">Poznań</div>
+                <div class="town">Radom</div>
+                <div class="town">Rzeszów</div>
+                <div class="town">Szczecin</div>
+                <div class="town">Toruń</div>
+                <div class="town">Trójmiasto</div>
+                <div class="town">Warszawa</div>
+                <div class="town">Włocławek</div>
+                <div class="town">Wrocław</div>
+                <div class="town">Zielona Góra</div>
+            </div>
+        </section>
         <section></section>
         <section></section>
     </main>
