feature/countries section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         </section>
 
-        <section class="towns-container">
+        <section class="towns-section">
             <div class="towns-header">
                 <h2>Miasta w pobliżu</h2>
                 <a href="index.html">Wyświetl wszystkie miasta (ponad 500)</a>
@@ -102,10 +102,49 @@
                 <div class="town">Zielona Góra</div>
             </div>
         </section>
-        <section></section>
-        <section></section>
+        <section class="countries-section">
+            <div class="countries-header">
+                <h2>Kraje, w których działa Uber Eats</h2>
+                <a href="index.html">Zobacz wszystkie kraje</a>
+            </div>
+             <div class="countries-list">
+                <div class="country">Australia</div>
+                <div class="country">Belgia</div>
+                <div class="country">Chile</div>
+                <div class="country">Dominikana</div>
+                <div class="country">Ekwador</div>
+                <div class="country">Francja</div>
+                <div class="country">Gwatemala</div>
+                <div class="country">Hiszpania</div>
+                <div class="country">Holandia</div>
+                <div class="country">Irlandia</div>
+                <div class="country">Japonia</div>
+                <div class="country">Kanada</div>
+                <div class="country">Kenia</div>
+                <div class="country">Kostaryka</div>
+                <div class="country">Luksemburg</div>
+                <div class="country">Meksyk</div>
+                <div class="country">Niemcy</div>
+                <div class="country">Nowa Zelandia</div>
+                <div class="country">Panama</div>
+                <div class="country">Polska</div>
+                <div class="country">Portugalia</div>
+                <div class="country">Republka Południowej Afryki</div>
+                <div class="country">Salwador</div>
+                <div class="country">Sri Lanka</div>
+                <div class="country">Stany Zjednoczone</div>
+                <div class="country">Szwajcaria</div>
+                <div class="country">Szwecja</div>
+                <div class="country">Tajwan(Republka Chińska)</div>
+                <div class="country">Wielka Brytania</div>
+                <div class="country">Włochy</div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="informations"></div>
+        <div class="privacy"></div>
+    </footer>
 </body>
 
 </html>
