--- a/index.html
+++ b/index.html
@@ -142,8 +142,59 @@
         </section>
     </main>
     <footer>
-        <div class="informations"></div>
-        <div class="privacy"></div>
+        <div class="informations">
+            <div class="logos">
+            <img src="img/logo.png" alt="logo">
+            <div class="download-apps">
+            <img src="img/applestore.png" alt="applestore">
+            <img src="img/googleplay.png" alt="google play">
+            </div>
+            </div>
+            <div class="info-list-container">
+            <div class="info-list">
+                <ul>
+                    <li>Pomoc</li>
+                    <li>Dodaj swoją restauracje</li>
+                    <li>Zarejestruj się,aby realizować dostawy</li>
+                    <li>Utwórz konto firmowe</li>
+                    <li>Warunki dot.opłaty marketplace</li>
+                    <li>Umowa dot.usług dostawy</li>
+                </ul>
+            </div>
+            <div class="info-list">
+                 <ul>
+                    <li>Restauracje w pobliżu</li>
+                    <li>Pokaż wszystkie miasta</li>
+                    <li>Zobacz wszystkie kraje</li>
+                    <li>Odbiór w pobliżu</li>
+                    <li>Informacje o Uber Eats</li>
+                    <li><i class="fa-solid fa-language"></i>Polski</li>
+                </ul>
+            </div>
+            </div>
+        </div>
+        <div class="privacy">
+            <div class="medias-container">
+            <div class="medias">
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="privacy-links">
+                <a>Działanie stron oraz aplikacji Uber i Uber Eats</a>
+                <a>Polityka prywatności</a>
+                <a>Warunki</a>
+                <a>Cennik</a>
+                <a>Nie zgadzam się na sprzedaż ani udostępnianie danych osobowych</a>
+            </div>
+
+            
+            </div>
+            <div class="privacy-info">
+             <span class="reCAPTCHA-info">Ta strona jest chroniona z użyciem kodu reCAPTCHA. Obowiązują dokumenty: <a> Polityka prywatności</a> oraz  <a>Warunki korzystania z usługi</a> firmy Google.</span>
+             <p>© 2025 Uber Technologies Inc.</p>
+            </div>
+        </div>
     </footer>
 </body>
 
