feature/scrollbar fading navbar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <span class="span-menu">
             <button class="btn-menu"><i class="fa-solid fa-bars"></i></button>
             <a href="index.html">Uber <b>Eats</b></a>
+            <button class="btn-location"><i class="fa-solid fa-location-dot"></i> Wpisz adres dostawy <i class="fa-solid fa-v"></i></button>
         </span>
 
         <span class="span-register">
@@ -196,6 +197,7 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
