--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <div class="overlay active">
+        </div>
     <nav>
 
         <span class="span-menu">
@@ -197,6 +199,7 @@
             </div>
         </div>
     </footer>
+    
     <script src="script.js"></script>
 </body>
 
