--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="overlay active">
+    <div class="overlay">
         <div class="overlay-order  overlay-content">
             <button><i class="fa-solid fa-x"></i></button>
             <h2>Wybierz godzinę</h2>
@@ -25,7 +25,7 @@
         <div class="overlay-location overlay-content"> 
                  <div class="overlay-location-header">
                     <h2>Wpisz adres dostawy</h2>
-                    <button><i class="fa-solid fa-x"></i></button>
+                    <button class="overlay-location-cancel"><i class="fa-solid fa-x"></i></button>
                  </div>
                  <div class="input-adres-container">
                      <i class="fa-solid fa-magnifying-glass"></i>
