feature/overlay order content

--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
 </head>
 
 <body>
-    <div class="overlay">
+    <div class="overlay ">
         <div class="overlay-order  overlay-content">
-            <button><i class="fa-solid fa-x"></i></button>
+            <button class="overlay-order-cancel"><i class="fa-solid fa-x"></i></button>
             <h2>Wybierz godzinę</h2>
-            <select></select>
-            <select></select>
-            <button>Zaplanuj</button>
-            <button>Dostarcz Teraz</button>
+            <div class="overlay-order-content">
+            <select class="overlay-order-select"></select>
+            <br>
+            <select class="overlay-order-select"></select>
+            <br>
+            <button class="overlay-order-plan">Zaplanuj</button>
+            <br>
+            <button class="overlay-order-now">Dostarcz Teraz</button>
+            </div>
         </div>
 
         <div class="overlay-location overlay-content"> 
