--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
         </div>
 
         </div>
+
+        <div class="sidebar hidde">
+            <div class="sidebar-content">
+            <div class="upper-content">
+            <button class="sidebar-Login">Zarejestruj się</button>
+            <button class="sidebar-SignIn">Zaloguj się</button>
+            <p>Utwórz konto firmowe</p>
+            <p>Dodaj swoją restaurację</p>
+            <p>Zarejestruj się, aby realizować dostawy</p>
+            <p>Zamów przejazd <i class="fa-solid fa-arrow-up-right-from-square"></i></p>
+            </div>
+            <div class="lower-content">
+                <div class="lower-content-logo">
+                <img src="img/appLogo.png" alt=" Uber Eats Logo">
+                <p>W aplikacji wybór jest jeszcze większy</p>
+                </div>
+                
+                <div class="lower-content-apps">
+                <button><i class="fa-brands fa-apple"></i>iphone</button>
+                <button><i class="fa-brands fa-android"></i>android</button>
+                </div>
+
+            </div>
+            </div>
+        </div>
     <nav>
 
         <span class="span-menu">
