feature/slide cancel after click

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         </div>
 
-        <div class="sidebar hidde">
+        <div class="sidebar ">
             <div class="sidebar-content">
             <div class="upper-content">
             <button class="sidebar-Login">Zarejestruj się</button>
