--- a/index.html
+++ b/index.html
@@ -134,10 +134,13 @@
             <h1>Zamów dostawę w Twojej okolicy</h1>
             <div class="order-container">
 
-                <div class="input-container">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <input type="text" placeholder="Wpisz adres dostawy">
-                </div>
+               
+           <div class="sticky-address-wrapper">
+             <div class="input-container">
+               <i class="fa-solid fa-location-dot"></i>
+               <input type="text" placeholder="Enter delivery address">
+             </div>
+        </div>
                 <div class="order-list-container">
                     <div class="order-list"><i class="fa-solid fa-clock"></i> Dostarcz Teraz <span
                             class="span-dropdown"><i class="fa-solid fa-v"></i></span></div>
