--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         </div>
     </footer>
     
-    <script src="scripts/script.js"></script>
+    <script type="module" src="scripts/script.js"></script>
 </body>
 
 </html>
