refactor/ separate date and hour function into file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                  </div>
                  <div class="input-adres-container">
                      <i class="fa-solid fa-magnifying-glass"></i>
-                     <input type="text" placeholder="Wyszukaj adres">
+                     <input type="text" placeholder="Wyszukaj adres" class="input-adres">
                  </div>
         </div>
 
@@ -77,8 +77,10 @@
 
         <span class="span-register">
             <a href="index.html">Zamów przejazd <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <span class="register-buttons">
             <button class="btn-Login">Zaloguj sie</button>
             <button class="btn-register">Zarejestruj się</button>
+            </span>
         </span>
 
     </nav>
