feature/location input in navbar

--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
             </div>
             </div>
         </div>
+
+    <div class="location-input">
+        <div class="input-container-navbar">
+      <div class="input-container-navbar-content">
+               <i class="fa-solid fa-location-dot"></i>
+               <input type="text" placeholder="Enter delivery address">
+      </div>
+      </div>
+    </div>    
+
     <nav>
 
         <span class="span-menu">
