--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
         </div>
     </header>
     <main>
+        <section class="app-section">
+        <div class="app-section-content">
+            <img  src="img/appLogo.png" alt=" Uber Eats Logo">
+            <p class="app-paragraph">W aplikacji na Androida wybór jest jeszcze większy</p>
+        </div>
+        <button class="app-button-download"><i class="fa-brands fa-android"></i>Pobierz aplikację</button>
+        </section>
         <section class="menu-container">
             <div class="menu-block">
                 <img src="img/utworz.png" alt="Utworz konto firmowe">
