fix/create responsive navbar layout for laptops

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <section class="app-section">
         <div class="app-section-content">
             <img  src="img/appLogo.png" alt=" Uber Eats Logo">
-            <p class="app-paragraph">W aplikacji na Androida wybór jest jeszcze większy</p>
+            <p >W aplikacji na Androida wybór jest jeszcze większy</p>
         </div>
         <button class="app-button-download"><i class="fa-brands fa-android"></i>Pobierz aplikację</button>
         </section>
