--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
         <span class="span-menu">
             <button class="btn-menu"><i class="fa-solid fa-bars"></i></button>
             <a href="index.html">Uber <b>Eats</b></a>
-            <button class="btn-location"><i class="fa-solid fa-location-dot"></i> Wpisz adres dostawy <i
-                    class="fa-solid fa-v"></i></button>
+            <button class="btn-location"><i class="fa-solid fa-location-dot"></i> Wpisz adres dostawy <i class="fa-solid fa-angle-down"></i></button>
         </span>
 
         <span class="span-register">
@@ -115,7 +114,7 @@
 
                 <div class="order-list-container">
                     <div class="order-list"><i class="fa-solid fa-clock"></i> Dostarcz Teraz <span
-                            class="span-dropdown"><i class="fa-solid fa-v"></i></span></div>
+                            class="span-dropdown"><i class="fa-solid fa-angle-down"></i></span></div>
                     <div class="order-list hidden"><i class="fa-solid fa-clock"></i> Dostarcz Teraz</div>
                     <div class="order-list hidden"><i class="fa-solid fa-calendar-days"></i> Zaplanuj na później</div>
                 </div>
