fix/delete order now button border

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="input-container-navbar">
             <div class="input-container-navbar-content">
                 <i class="fa-solid fa-location-dot"></i>
-                <input type="text" placeholder="Enter delivery address">
+                <input type="text" placeholder="Wpisz adres dostawy">
             </div>
         </div>
     </div>
