fix/change overlay location text

--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
                 <button class="overlay-order-plan">Zaplanuj</button>
                 <br>
                 <button class="overlay-order-now">Dostarcz Teraz</button>
-
             </div>
         </div>
 
         <div class="overlay-location overlay-content">
             <div class="overlay-location-header">
-                <h2>Wpisz adres dostawy</h2>
+                <h2>Dostarczyć do:</h2>
                 <button class="overlay-location-cancel"><i class="fa-solid fa-x"></i></button>
             </div>
 
             <div class="input-adres-container">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Wyszukaj adres" class="input-adres">
+                <input type="text" placeholder="Wpisz adres dostawy" class="input-adres">
             </div>
         </div>
 
